--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href = "style.css" rel = "stylesheet" type = "text/css"/>
 
   <title>Verbum</title>
-  <link rel = "icon" href = "">
+  <link rel = "icon" href = "icon.png">
 
   <link rel = "preconnect" href = "https://fonts.googleapis.com">
   <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
