--- a/index.html
+++ b/index.html
@@ -93,8 +93,38 @@
       </div>
     </div>
     
-    <div class = "word">
-      
+    <!-- Test words -->
+    <div class = "words">
+      <!-- Previous word -->
+      <div class = "p-word">
+        <div class = "side-bar"></div>
+        <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
+        <div class = "prompt-container">
+          <div class = "prompt">porto</div>
+          <div class = "part-of-speech">verb</div>
+        </div>
+        <div class = "translation">carry</div>
+      </div>
+      <!-- Current word -->
+      <div class = "c-word">
+        <div class = "side-bar"></div>
+        <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
+        <div class = "prompt-container">
+          <div class = "prompt">porto</div>
+          <div class = "part-of-speech">verb</div>
+        </div>
+        <div class = "translation">carry</div>
+      </div>
+      <!-- Next word -->
+      <div class = "n-word">
+        <div class = "side-bar"></div>
+        <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
+        <div class = "prompt-container">
+          <div class = "prompt">porto</div>
+          <div class = "part-of-speech">verb</div>
+        </div>
+        <div class = "translation">carry</div>
+      </div>
     </div>
   </div>
 
