Animations! (press enter)

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- Test words -->
     <div class = "words">
       <!-- Previous word -->
-      <div class = "p-word">
+      <div class = "word word-small" id = "p">
         <div class = "side-bar"></div>
         <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
         <div class = "prompt-container">
@@ -106,7 +106,7 @@
         <div class = "translation">carry</div>
       </div>
       <!-- Current word -->
-      <div class = "c-word">
+      <div class = "word word-big" id = "c">
         <div class = "side-bar"></div>
         <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
         <div class = "prompt-container">
@@ -116,7 +116,17 @@
         <div class = "translation">carry</div>
       </div>
       <!-- Next word -->
-      <div class = "n-word">
+      <div class = "word word-small" id = "n">
+        <div class = "side-bar"></div>
+        <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
+        <div class = "prompt-container">
+          <div class = "prompt">porto</div>
+          <div class = "part-of-speech">verb</div>
+        </div>
+        <div class = "translation">carry</div>
+      </div>
+      <!-- Next Next word (for animations) -->
+      <div class = "word word-gone"  id = "m">
         <div class = "side-bar"></div>
         <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
         <div class = "prompt-container">
