Inputs and api test

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
         </div>
-        <div class = "translation">carry</div>
+        <input id = "p-input" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
       </div>
       <!-- Current word -->
       <div class = "word word-big" id = "c">
@@ -113,7 +113,7 @@
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
         </div>
-        <div class = "translation">carry</div>
+        <input id = "c-input" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
       </div>
       <!-- Next word -->
       <div class = "word word-small" id = "n">
@@ -123,7 +123,7 @@
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
         </div>
-        <div class = "translation">carry</div>
+        <input id = "n-input" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
       </div>
       <!-- Next Next word (for animations) -->
       <div class = "word word-gone"  id = "m">
@@ -133,7 +133,7 @@
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
         </div>
-        <div class = "translation">carry</div>
+        <input id = "m-input" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
       </div>
     </div>
   </div>
