Remove api stuff that doesn't work

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel = "preconnect" href = "https://fonts.googleapis.com">
   <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
   <link href = "https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel = "stylesheet">
+
+  <meta name="csrf_token" content="r9U4L3FnCfzmpVMBRplnbh0bUrBOEb5oPSzRFPNL2ImuKr60IIaWNUYSQs7B2v1n">
 </head>
 
 <body>
