Input stuff and wordlist stuff

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
         </div>
-        <input id = "p-input" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
+        <input id = "p-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
       </div>
       <!-- Current word -->
       <div class = "word word-big" id = "c">
@@ -125,7 +125,7 @@
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
         </div>
-        <input id = "n-input" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
+        <input id = "n-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
       </div>
       <!-- Next Next word (for animations) -->
       <div class = "word word-gone"  id = "m">
@@ -135,7 +135,7 @@
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
         </div>
-        <input id = "m-input" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
+        <input id = "m-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
       </div>
     </div>
   </div>
