--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 </head>
 
 <body>
-  <div class = "vertical"></div>
-  <div class = "horizontal"></div>
-
   <div class = "main">
     <div class = "top-bar">
       <!-- VERBUM -->
@@ -98,7 +95,7 @@
       <!-- Previous word -->
       <div class = "word word-small" id = "p">
         <div class = "side-bar"></div>
-        <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
+        <div class = "full-name">porto, portas, portare A, portavi, portatum</div>
         <div class = "prompt-container">
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
@@ -108,7 +105,7 @@
       <!-- Current word -->
       <div class = "word word-big" id = "c">
         <div class = "side-bar"></div>
-        <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
+        <div class = "full-name">porto, portas, portare A, portavi, portatum</div>
         <div class = "prompt-container">
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
@@ -118,7 +115,7 @@
       <!-- Next word -->
       <div class = "word word-small" id = "n">
         <div class = "side-bar"></div>
-        <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
+        <div class = "full-name">porto, portas, portare A, portavi, portatum</div>
         <div class = "prompt-container">
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
@@ -128,7 +125,7 @@
       <!-- Next Next word (for animations) -->
       <div class = "word word-gone"  id = "m">
         <div class = "side-bar"></div>
-        <div class = "full-information">porto, portas, portare A, portavi, portatum</div>
+        <div class = "full-name">porto, portas, portare A, portavi, portatum</div>
         <div class = "prompt-container">
           <div class = "prompt">porto</div>
           <div class = "part-of-speech">verb</div>
