--- a/index.html
+++ b/index.html
@@ -95,42 +95,42 @@
       <!-- Previous word -->
       <div class = "word word-small" id = "p">
         <div class = "side-bar"></div>
-        <div class = "full-name">porto, portas, portare A, portavi, portatum</div>
+        <div class = "full-name"></div>
         <div class = "prompt-container">
-          <div class = "prompt">porto</div>
-          <div class = "part-of-speech">verb</div>
+          <div class = "prompt"></div>
+          <div class = "part-of-speech"></div>
         </div>
-        <input id = "p-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
+        <input id = "p-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength = "100">
       </div>
       <!-- Current word -->
       <div class = "word word-big" id = "c">
         <div class = "side-bar"></div>
-        <div class = "full-name">porto, portas, portare A, portavi, portatum</div>
+        <div class = "full-name"></div>
         <div class = "prompt-container">
-          <div class = "prompt">porto</div>
-          <div class = "part-of-speech">verb</div>
+          <div class = "prompt"></div>
+          <div class = "part-of-speech"></div>
         </div>
-        <input id = "c-input" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
+        <input id = "c-input" class = "translation" type = "text" autocomplete = "off" maxlength = "100">
       </div>
       <!-- Next word -->
       <div class = "word word-small" id = "n">
         <div class = "side-bar"></div>
-        <div class = "full-name">porto, portas, portare A, portavi, portatum</div>
+        <div class = "full-name"></div>
         <div class = "prompt-container">
-          <div class = "prompt">porto</div>
-          <div class = "part-of-speech">verb</div>
+          <div class = "prompt"></div>
+          <div class = "part-of-speech"></div>
         </div>
-        <input id = "n-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
+        <input id = "n-input" class = "translation" type = "text" autocomplete = "off" maxlength = "100" readonly = "readonly">
       </div>
       <!-- Next Next word (for animations) -->
       <div class = "word word-gone"  id = "m">
         <div class = "side-bar"></div>
-        <div class = "full-name">porto, portas, portare A, portavi, portatum</div>
+        <div class = "full-name"></div>
         <div class = "prompt-container">
-          <div class = "prompt">porto</div>
-          <div class = "part-of-speech">verb</div>
+          <div class = "prompt"></div>
+          <div class = "part-of-speech"></div>
         </div>
-        <input id = "m-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength= "100">
+        <input id = "m-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength = "100">
       </div>
     </div>
   </div>
