Change colours before animation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class = "top-bar">
       <!-- VERBUM -->
       <div class = "verbum-title">Verbum</div>
-      <div class = "description">a vocabulary tester for the CLC latin course</div>
+      <div class = "description">why are there two future tenses!!1</div>
       <!-- Status Bar (info about the test) -->
       <div class = "status-bar">
         <!-- Test Progress (percentage correct) -->
