set up fontawesome, began work on settings popup

--- a/index.html
+++ b/index.html
@@ -2,136 +2,147 @@
 <html>
 
 <head>
-  <meta charset = "utf-8">
-  <meta name = "viewport" content = "width=device-width">
-  <link href = "style.css" rel = "stylesheet" type = "text/css"/>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link href="style.css" rel="stylesheet" type="text/css"/>
 
   <title>Verbum</title>
-  <link rel = "icon" href = "icon.png">
+  <link rel="icon" href="icon.png">
 
-  <link rel = "preconnect" href = "https://fonts.googleapis.com">
-  <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-  <link href = "https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel = "stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/6b99329b77.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class = "main">
-    <div class = "top-bar">
+  <div class="main">
+    <div class="top-bar">
       <!-- VERBUM -->
-      <div class = "verbum-title">Verbum</div>
-      <div class = "description">why are there two future tenses!!1</div>
+      <div class="verbum-title">Verbum</div>
+      <div class="description">why are there two future tenses!!1</div>
       <!-- Status Bar (info about the test) -->
-      <div class = "status-bar">
+      <div class="status-bar">
         <!-- Test Progress (percentage correct) -->
-        <svg width = "40" height = "40" viewBox = "0 0 40 40" class = "test-progress" xmlns = "http://www.w3.org/2000/svg">
-          <circle class = "bg"></circle>
-          <circle class = "fg"></circle>
-          <text class = "test-progress-text" x = "50%" y = "52%" text-anchor = "middle" fill = "white" 
-          font-size = "9px" font-family = "Golos Text" dy = ".3em" style = "user-select: none;">--%</text>
+        <svg width="40" height="40" viewBox="0 0 40 40" class="test-progress" xmlns="http://www.w3.org/2000/svg">
+          <circle class="bg"></circle>
+          <circle class="fg"></circle>
+          <text class="test-progress-text" x="50%" y="52%" text-anchor="middle" fill="white" 
+          font-size="9px" font-family="Golos Text" dy=".3em" style="user-select: none;">--%</text>
         </svg>
         <!-- Cycle Progress (number and percentage of cycles) -->
-        <svg width = "40" height = "40" viewBox = "0 0 40 40" class = "cycle-progress" xmlns = "http://www.w3.org/2000/svg">
-          <circle class = "bg"></circle>
-          <circle class = "fg"></circle>
-          <text class = "cycle-progress-text" x = "50%" y = "52%" text-anchor = "middle" fill = "white" 
-          font-size = "12px" font-family = "Golos Text" dy = ".3em" style = "user-select: none;">-</text>
+        <svg width="40" height="40" viewBox="0 0 40 40" class="cycle-progress" xmlns="http://www.w3.org/2000/svg">
+          <circle class="bg"></circle>
+          <circle class="fg"></circle>
+          <text class="cycle-progress-text" x="50%" y="52%" text-anchor="middle" fill="white" 
+          font-size="12px" font-family="Golos Text" dy=".3em" style="user-select: none;">-</text>
         </svg>
         <!-- Number of words correct / Number of words tested -->
-        <div class = "score-count">--/--</div>
+        <div class="score-count">--/--</div>
+      </div>
+      <div class = "settings-icon">
+        <i class="fa-solid fa-gear fa-xl"></i>
       </div>
     </div>
 
-    <div class = "stage-lists">
+    <div class="stage-lists">
       <!-- 1-20 -->
-      <div class = "stage-list">
-        <div class = "stage-button">1</div>
-        <div class = "stage-button">2</div>
-        <div class = "stage-button">3</div>
-        <div class = "stage-button">4</div>
-        <div class = "stage-button">5</div>
-        <div class = "stage-button">6</div>
-        <div class = "stage-button">7</div>
-        <div class = "stage-button">8</div>
-        <div class = "stage-button">9</div>
-        <div class = "stage-button">10</div>
-        <div class = "stage-button">11</div>
-        <div class = "stage-button">12</div>
-        <div class = "stage-button">13</div>
-        <div class = "stage-button">14</div>
-        <div class = "stage-button">15</div>
-        <div class = "stage-button">16</div>
-        <div class = "stage-button">17</div>
-        <div class = "stage-button">18</div>
-        <div class = "stage-button">19</div>
-        <div class = "stage-button">20</div>
+      <div class="stage-list">
+        <div class="stage-button">1</div>
+        <div class="stage-button">2</div>
+        <div class="stage-button">3</div>
+        <div class="stage-button">4</div>
+        <div class="stage-button">5</div>
+        <div class="stage-button">6</div>
+        <div class="stage-button">7</div>
+        <div class="stage-button">8</div>
+        <div class="stage-button">9</div>
+        <div class="stage-button">10</div>
+        <div class="stage-button">11</div>
+        <div class="stage-button">12</div>
+        <div class="stage-button">13</div>
+        <div class="stage-button">14</div>
+        <div class="stage-button">15</div>
+        <div class="stage-button">16</div>
+        <div class="stage-button">17</div>
+        <div class="stage-button">18</div>
+        <div class="stage-button">19</div>
+        <div class="stage-button">20</div>
       </div>
       <!-- 21-40 -->
-      <div class = "stage-list">
-        <div class = "stage-button">21</div>
-        <div class = "stage-button">22</div>
-        <div class = "stage-button">23</div>
-        <div class = "stage-button">24</div>
-        <div class = "stage-button">25</div>
-        <div class = "stage-button">26</div>
-        <div class = "stage-button">27</div>
-        <div class = "stage-button">28</div>
-        <div class = "stage-button">29</div>
-        <div class = "stage-button">30</div>
-        <div class = "stage-button">31</div>
-        <div class = "stage-button">32</div>
-        <div class = "stage-button">33</div>
-        <div class = "stage-button">34</div>
-        <div class = "stage-button">35</div>
-        <div class = "stage-button">36</div>
-        <div class = "stage-button">37</div>
-        <div class = "stage-button">38</div>
-        <div class = "stage-button">39</div>
-        <div class = "stage-button">40</div>
+      <div class="stage-list">
+        <div class="stage-button">21</div>
+        <div class="stage-button">22</div>
+        <div class="stage-button">23</div>
+        <div class="stage-button">24</div>
+        <div class="stage-button">25</div>
+        <div class="stage-button">26</div>
+        <div class="stage-button">27</div>
+        <div class="stage-button">28</div>
+        <div class="stage-button">29</div>
+        <div class="stage-button">30</div>
+        <div class="stage-button">31</div>
+        <div class="stage-button">32</div>
+        <div class="stage-button">33</div>
+        <div class="stage-button">34</div>
+        <div class="stage-button">35</div>
+        <div class="stage-button">36</div>
+        <div class="stage-button">37</div>
+        <div class="stage-button">38</div>
+        <div class="stage-button">39</div>
+        <div class="stage-button">40</div>
       </div>
     </div>
     
     <!-- Test words -->
-    <div class = "words">
+    <div class="words">
       <!-- Previous word -->
-      <div class = "word word-small" id = "p">
-        <div class = "side-bar"></div>
-        <div class = "full-name"></div>
-        <div class = "prompt-container">
-          <div class = "prompt"></div>
-          <div class = "part-of-speech"></div>
+      <div class="word word-small" id="p">
+        <div class="side-bar"></div>
+        <div class="full-name"></div>
+        <div class="prompt-container">
+          <div class="prompt"></div>
+          <div class="part-of-speech"></div>
         </div>
-        <input id = "p-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength = "100">
+        <input id="p-input" readonly="readonly" class="translation" type="text" autocomplete="off" maxlength="100">
       </div>
       <!-- Current word -->
-      <div class = "word word-big" id = "c">
-        <div class = "side-bar"></div>
-        <div class = "full-name"></div>
-        <div class = "prompt-container">
-          <div class = "prompt"></div>
-          <div class = "part-of-speech"></div>
+      <div class="word word-big" id="c">
+        <div class="side-bar"></div>
+        <div class="full-name"></div>
+        <div class="prompt-container">
+          <div class="prompt"></div>
+          <div class="part-of-speech"></div>
         </div>
-        <input id = "c-input" class = "translation" type = "text" autocomplete = "off" maxlength = "100">
+        <input id="c-input" class="translation" type="text" autocomplete="off" maxlength="100">
       </div>
       <!-- Next word -->
-      <div class = "word word-small" id = "n">
-        <div class = "side-bar"></div>
-        <div class = "full-name"></div>
-        <div class = "prompt-container">
-          <div class = "prompt"></div>
-          <div class = "part-of-speech"></div>
+      <div class="word word-small" id="n">
+        <div class="side-bar"></div>
+        <div class="full-name"></div>
+        <div class="prompt-container">
+          <div class="prompt"></div>
+          <div class="part-of-speech"></div>
         </div>
-        <input id = "n-input" class = "translation" type = "text" autocomplete = "off" maxlength = "100" readonly = "readonly">
+        <input id="n-input" class="translation" type="text" autocomplete="off" maxlength="100" readonly="readonly">
       </div>
       <!-- Next Next word (for animations) -->
-      <div class = "word word-gone"  id = "m">
-        <div class = "side-bar"></div>
-        <div class = "full-name"></div>
-        <div class = "prompt-container">
-          <div class = "prompt"></div>
-          <div class = "part-of-speech"></div>
+      <div class="word word-gone"  id="m">
+        <div class="side-bar"></div>
+        <div class="full-name"></div>
+        <div class="prompt-container">
+          <div class="prompt"></div>
+          <div class="part-of-speech"></div>
         </div>
-        <input id = "m-input" readonly="readonly" class = "translation" type = "text" autocomplete = "off" maxlength = "100">
+        <input id="m-input" readonly="readonly" class="translation" type="text" autocomplete="off" maxlength="100">
       </div>
+    </div>
+    <div class="settings">
+      <div class="settings-icon-back"></div>
+      Settings
+      <div class="settings-label">Animation duration</div>
+      <input id="animation-duration" class="settings-input" type="text" autocomplete="off" maxlength="10"
+      onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
     </div>
   </div>
 
