making settings actually function

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
       Settings
       <div class="settings-label">Animation duration</div>
       <input id="animation-duration" class="settings-input" type="text" autocomplete="off" maxlength="10"
-      onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+      onkeypress="return (event.charCode != 8 && event.charCode == 0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+      <div class="settings-save">Save</div>
     </div>
   </div>
 
