--- a/index.html
+++ b/index.html
@@ -141,8 +141,10 @@
       <div class="settings-icon-back"></div>
       Settings
       <div class="settings-label">Animation duration</div>
-      <input id="animation-duration" class="settings-input" type="text" autocomplete="off" maxlength="10"
+      <input id="animation-duration" class="settings-input-text" type="text" autocomplete="off" maxlength="10"
       onkeypress="return (event.charCode != 8 && event.charCode == 0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+      <br> <div class="settings-label">Second chance</div>
+      <input id="second-chance" class="settings-input-toggle" type="checkbox">
       <div class="settings-save">Save</div>
     </div>
   </div>
