start and free test buttons working (kinda)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <div class="description">vocabulary tester for CLC</div>
       <!-- Status Bar (info about the test) -->
       <div class="status-bar test">
+        <!-- Timer -->
+        <div class="timer">0:00</div>
         <!-- Test Progress (percentage correct) -->
         <svg width="40" height="40" viewBox="0 0 40 40" class="test-progress" xmlns="http://www.w3.org/2000/svg">
           <circle class="bg"></circle>
@@ -101,8 +103,8 @@
       <div class="test-options-explanation">
         <span class="example">cycle <em>x</em></span> - test <em>x</em> cycles <br>
         <span class="example">word <em>x</em></span> - test <em>x</em> words <br>
-        <span class="example"><em>x</em>s</span> - text for <em>x</em> seconds <br>
-        <span class="example"><em>x</em>m</span> - text for <em>x</em> minutes <br>
+        <span class="example">s <em>x</em></span> - text for <em>x</em> seconds <br>
+        <span class="example">m <em>x</em></span> - text for <em>x</em> minutes <br>
       </div>
       <input id="test-options" class="test-options-input" type="text" placeholder="type in your test options here">
       <div style="display:flex">
