timer working WOOO!!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Status Bar (info about the test) -->
       <div class="status-bar test">
         <!-- Timer -->
-        <div class="timer">0:00</div>
+        <div class="timer test">0:00</div>
         <!-- Test Progress (percentage correct) -->
         <svg width="40" height="40" viewBox="0 0 40 40" class="test-progress" xmlns="http://www.w3.org/2000/svg">
           <circle class="bg"></circle>
