prevent starting test with no stages selected

--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
     </div>
     
     <div class="start home">
-      <- Select stages (shift-click to toggle multiple)
+      <div class="select-stages-prompt">
+        <- Select stages (shift-click to toggle multiple)
+      </div>
       <h3>Test options</h3>
       <div class="test-options-explanation">
         <span class="example">cycle <em>x</em></span> - test <em>x</em> cycles <br>
