--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
         <div class="start-button">Start</div>
         <div class="free-button">Free</div>
       </div>
-
     </div>
 
     <!-- Test words -->
@@ -166,6 +165,29 @@
       onkeypress="return (event.charCode != 8 && event.charCode == 0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
       <br> <div class="settings-label">Second chance</div>
       <input id="second-chance" class="settings-input-toggle" type="checkbox">
+    </div>
+
+    <div class="review end">
+      Test results
+      <div class="result-bar"><div class="result-bar-inner"></div></div>
+      <div class="word-results">
+        <div class="word-result">
+          <div style="display:flex">
+            <div class="word-result-word">porto</div>
+            <div class="word-result-translation">carry, bring</div>
+            <div class="word-result-stats">3/3</div>
+          </div>
+          <div class="word-result-bar">
+            <div class="word-result-bar-inner"></div>
+          </div>
+        </div>
+        a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>
+      </div>
+      <div style="display:flex">
+        <div class="home-button">Home</div>
+        <div class="again-button">Again</div>
+        <div class="tiwa-button">TIWA</div>
+      </div>
     </div>
   </div>
 
