overall results and bug fixing (prevent input when not in a test)

--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@
 
     <div class="review end">
       Test results
+      <div class="results">0/0</div>
       <div class="result-bar"><div class="result-bar-inner"></div></div>
       <div class="word-results">
-        <div class="word-result">
+        <div class="word-result word-result-example">
           <div style="display:flex">
             <div class="word-result-word">porto</div>
             <div class="word-result-translation">carry, bring</div>
@@ -181,7 +182,6 @@
             <div class="word-result-bar-inner"></div>
           </div>
         </div>
-        a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>
       </div>
       <div style="display:flex">
         <div class="home-button">Home</div>
