end test button

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
         <input id="m-input" readonly="readonly" class="translation" type="text" autocomplete="off" maxlength="100">
       </div>
     </div>
+
+    <div class="end-test-button test">End test</div>
+
     <div class="settings">
       <div class="settings-icon-back"></div>
       Settings
