--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
     </div>
     
     <div class="start home">
+      <div class="dopamine-box">
+        Dopamine Box
+        <div class="db-week"></div>
+        <div class="db-day-container">
+          <div class="db-day"></div>
+          <div class="db-day"></div>
+          <div class="db-day"></div>
+          <div class="db-day"></div>
+          <div class="db-day"></div>
+          <div class="db-day"></div>
+          <div class="db-day"></div>
+        </div>
+      </div>
+
       <div class="select-stages-prompt">
         <- Select stages (shift-click to toggle multiple)
       </div>
@@ -168,6 +182,8 @@
       onkeypress="return (event.charCode != 8 && event.charCode == 0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
       <br> <div class="settings-label">Second chance</div>
       <input id="second-chance" class="settings-input-toggle" type="checkbox">
+      <br> <div class="settings-label">Dopamine box</div>
+      <input id="dopamine-box" class="settings-input-toggle" type="checkbox">
     </div>
 
     <div class="review end">
