allow user to select category type and sort type + save locally

--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@
       Test results
       <div class="results">0/0</div>
       <div class="result-bar"><div class="result-bar-inner"></div></div>
+      <div style="display:flex">
+        <button id="category" class="choose"></button>
+        <button id="sort" class="choose"></button>
+      </div>
       <div class="word-results">
 
       </div>
