--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <div class="stage-button">39</div>
         <div class="stage-button">40</div>
       </div>
+      <div class="stage-button stage-41-button">extra list</div>
     </div>
     
     <div class="start home">
